# simple-chess-games-c-wrapper

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/simplechess/: simplechess.h
src/: simplechess_c.cpp
tests/: test_suite.c
